<resources>
    <string name="app_name">AppFinal</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="h1">Jaxtina là trung tâm đào tạo Tiếng Anh GIỎI TOÀN DIỆN 4 kỹ năng Nghe - Nói - Đọc - Viết đầu tiên tại Việt Nam thuộc Jaxtina Group với quy mô trên toàn quốc. Sứ mệnh của Jaxtina là giúp người Việt tự tin sử dụng tiếng Anh khi đi ra thế giới.</string>
    <string name="h2">Với trên 5 năm nghiên cứu và phát triển, Jaxtina đã đào tạo trên 20.000 Học viên với Lộ trình Toàn Diện 4 Kỹ Năng, Lộ trình luyện thi IELTS tinh gọn và TOEIC 4 Kĩ Năng hiệu quả giúp học viên sử dụng thành thạo tiếng Anh trong học tập và công việc.</string>
    <string name="h0">TRUNG TÂM TIẾNG ANH JAXTINA</string>
    <string name="h3">LÝ DO TẠI SAO CHỌN JAXTINA</string>
    <string name="h4">MÔ HÌNH TIẾNG ANH TOÀN DIỆN</string>
    <string name="h5">Tiên phong dạy 4 kĩ năng toàn diện tại Việt Nam</string>
    <string name="h6">CHẤT LƯỢNG CHUẨN QUỐC TẾ</string>
    <string name="h7">Giáo trình và phương pháp dạy theo chuẩn thế giới</string>
    <string name="h8">ĐỘI NGŨ GIẢNG VIÊN CHUYÊN NGHIỆP</string>
    <string name="h9">Sở hữu nhiều năm kinh nghiệm</string>
    <string name="h10">MÔI TRƯỜNG HỌC LÝ TƯỞNG</string>
    <string name="h11">Với sĩ số vàng chỉ 15–17 học viên/lớp</string>
    <string name="h12">HỌC LẠI HOÀN TOÀN MIỄN PHÍ</string>
    <string name="h13">Học lại miễn phí nếu không đạt cam kết đầu ra</string>
    <string name="h14">HỖ TRỢ TẬN TÌNH 24/7</string>
    <string name="h15">Đội ngũ Giáo viên và Care luôn sẵn sàng giúp bạn bất kì lúc nào</string>
    <string name="h16">HỌC VIÊN NÓI GÌ VỀ JAXTINA</string>
    <string name="h17">Họ tên: NGUYỄN VĂN THU</string>
    <string name="h18">Mình thực sự thích cách dạy của giáo viên và kiến thức của cô. Các kiên thức ở khóa học này mình học được là cách diễn đạt trong đó là cách dử dụng các techniques để có bài nói tốt hơn.</string>
    <string name="h19">Học viên: HƯNG NAM</string>
    <string name="h20">Sau khóa học tiếng Anh 4 kĩ năng Nghe-Nói-Đọc-Viết tại Jaxtina thì hiện tại mình có thể dùng tiếng anh rất tự tin tất cả các kĩ năng. Giáo viên tại trung tâm với phong cách và phương pháp dạy rất hấp dẫn giúp mình trở nên yêu thích tiếng Anh, tiếp thu nhanh và tiến bộ cũng rất nhanh so với lúc đầu.</string>
    <string name="h21">Học viên: TRẦN THỊ MAI</string>
    <string name="h22">Mình khi đến với lớp học mới chi bình thường: đọc phát âm sai mặc dù tự tin sau mỗi buổi học mình nhận thấy mình cần phải cố gắng thật nhiều hơn để theo kịp với các thành viên khác trong lớp. Mình lúc đầu rất ngại ngùng khi nói nhưng sau đó mình cảm thấy được cải thiện.</string>
    <string name="h23">Học viên: TRẦN QUỐC TUẤN</string>
    <string name="h24">Khóa học cho người mới bắt đầu đã giúp em ôn lại những kiến thức cơ bản nhất của Tiếng Anh và giúp em thích thú, muốn tiếp tục theo đuổi môn này.</string>
    <string name="l1">Back</string>
    <string name="l2">Lesson:</string>
    <string name="l3">Chọn ngày</string>
    <string name="l4">Nội dung bài học ngày</string>
    <string name="l5">Chọn lớp</string>
    <string name="l6">1. Book (Giáo trình):</string>
    <string name="l7">2. Topic (Chủ đề):</string>
    <string name="l8">3. Vocabulary (Từ vựng)</string>
    <string name="l9">thêm từ</string>
    <string name="l10">4. Activities (Hoạt động thực hành)</string>
    <string name="l11">5. Homeworks (Bài tập về nhà)</string>
    <string name="l12">6. Class\'s status (Tình hình lớp học)</string>
    <string name="l13">Học viên</string>
    <string name="l14">Tình hình học tập</string>
    <string name="l15">ĐĂNG</string>
    <string name="l16">HUỶ BỎ</string>
    <string name="ll1">Lesson 4</string>
    <string name="ll2">Ngày 10/10/2019</string>
    <string name="p1">Để lấy lại mật khẩu, vui lòng liên hệ tổng đài hỗ trợ 1900 63 64 65</string>
    <string name="p2">Gọi ngay</string>
    <string name="f">Quay lại đăng nhập</string>
    <string name="d1">Trang chủ</string>
    <string name="d2">Đăng nhập</string>
    <string name="d3">Quên mật khẩu</string>
    <string name="d4">Đăng ký</string>
    <string name="d5">Về Jaxtina</string>
    <string name="l17">Danh sách các bài học</string>
    <string name="l18">Danh sách các bài kiểm tra</string>
    <string name="l19">Bài kiểm tra</string>
    <string name="l20">Bài học</string>
    <string name="lesson">Lesson:</string>
    <string name="l22">Chọn video</string>
    <string name="dw1">Thông tin cá nhân</string>
    <string name="dw2">Dạy học</string>
    <string name="dw3">Thời khoá biểu</string>
    <string name="dw4">Học tập</string>
    <string name="dw5">Trò chuyện</string>
    <string name="dw6">Đăng xuất</string>
</resources>
