<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_profile_gv"
            android:icon="@drawable/ic_user2"
            android:title="@string/dw1" />
        <item
            android:id="@+id/nav_learn_gv"
            android:icon="@drawable/ic_learn"
            android:title="@string/dw2" />
        <item
            android:id="@+id/nav_tkb_gv"
            android:icon="@drawable/ic_timetable"
            android:title="@string/dw3"/>
        <item
            android:id="@+id/nav_chat_gv"
            android:icon="@drawable/ic_chat"
            android:title="@string/dw5" />
        <item
            android:id="@+id/nav_logout_gv"
            android:icon="@drawable/ic_logout"
            android:title="@string/dw6" />
    </group>

</menu>