<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_homepage"
            android:icon="@drawable/ic_home"
            android:title="@string/d1" />
        <item
            android:id="@+id/nav_login"
            android:icon="@drawable/ic_login"
            android:title="@string/d2" />
        <item
            android:id="@+id/nav_register"
            android:icon="@drawable/ic_registration"
            android:title="@string/d4" />
        <item
            android:id="@+id/nav_aboutus"
            android:icon="@drawable/ic_info"
            android:title="@string/d5" />
    </group>

</menu>