<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#E43F3F">

    <TextView
        android:id="@+id/textViewForgot"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:gravity="center"
        android:padding="30dp"
        android:text="@string/p1"
        android:textColor="#FFFFFF"
        android:textSize="22sp" />

    <Button
        android:id="@+id/buttonCall"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/textViewForgot"
        android:layout_centerInParent="true"
        android:background="#00FF0A"
        android:paddingLeft="30dp"
        android:paddingRight="30dp"
        android:text="@string/p2"
        android:textColor="#4355B8" />

    <TextView
        android:id="@+id/textViewBacktoLogin"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="30dp"
        android:drawableLeft="@drawable/ic_back"
        android:drawablePadding="10dp"
        android:text="@string/f"
        android:textColor="#FFF"
        android:textSize="20sp" />

</RelativeLayout>