<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/layout_lessonPH"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="#FFFFFF">

    <RelativeLayout
        android:id="@+id/headerx"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true">

        <TextView
            android:id="@+id/textViewBackToLearnPH"
            android:layout_width="match_parent"
            android:layout_height="45dp"
            android:background="@color/wallet_hint_foreground_holo_light"
            android:drawableLeft="@drawable/ic_back"
            android:drawablePadding="5dp"
            android:padding="10dp"
            android:text="@string/l1"
            android:textColor="#ffffff"
            android:textSize="18sp"
            tools:ignore="RtlHardcoded" />
    </RelativeLayout>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/headerx">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="10dp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:orientation="horizontal"
                android:weightSum="2">

                <TextView
                    android:id="@+id/text_view_lop_ph"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:background="@drawable/bg_white_stroke"
                    android:gravity="center"
                    android:text="Lớp: "
                    android:textColor="#000"
                    android:textSize="15sp" />

                <TextView
                    android:id="@+id/text_view_lesson_ph"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:background="@drawable/bg_white_stroke"
                    android:gravity="center"
                    android:text="Lesson: "
                    android:textColor="#000"
                    android:textSize="15sp" />

            </LinearLayout>

            <TextView
                android:id="@+id/text_view_date_ph"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:padding="10dp"
                android:text="@string/l4"
                android:textColor="#000"
                android:textSize="15sp" />


            <TextView
                android:id="@+id/text_view_book_ph"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:text="1. Book (Giáo trình): "
                android:textColor="#000"
                android:textSize="15sp" />

            <TextView
                android:id="@+id/text_view_topic_ph"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:text="2. Topic (Chủ đề): "
                android:textColor="#000"
                android:textSize="15sp" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:text="@string/l8"
                android:textColor="#000"
                android:textSize="15sp" />

            <LinearLayout
                android:id="@+id/layout_listword_ph"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:text="@string/l10"
                android:textColor="#000"
                android:textSize="15sp" />

            <TextView
                android:id="@+id/text_view_activities_ph"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingLeft="20dp"
                android:textColor="#000" />

            <com.pierfrancescosoffritti.androidyoutubeplayer.core.player.views.YouTubePlayerView
                android:id="@+id/video_lesson_ph"
                android:layout_width="match_parent"
                android:layout_height="210dp"
                android:layout_marginTop="10dp" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:text="@string/l11"
                android:textColor="#000"
                android:textSize="15sp" />

            <TextView
                android:id="@+id/text_view_homeworks_ph"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingLeft="20dp"
                android:textColor="#000" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:text="@string/l12"
                android:textColor="#000"
                android:textSize="15sp" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:orientation="horizontal"
                android:weightSum="7">

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="2"
                    android:background="@drawable/bg_white_stroke"
                    android:gravity="center"
                    android:padding="10dp"
                    android:text="@string/l13"
                    android:textColor="#000" />

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="5"
                    android:background="@drawable/bg_white_stroke"
                    android:gravity="center"
                    android:padding="10dp"
                    android:text="@string/l14"
                    android:textColor="#000" />
            </LinearLayout>

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/layout_litstatus_ph"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />

        </LinearLayout>

    </ScrollView>

</RelativeLayout>